# ConnectR

./: .gitmodules  CMakeLists.txt  README.md  sonar-project.properties
connectR/: Board.cpp  Board.hpp  CMakeLists.txt  ConnectBoard.cpp  ConnectBoard.hpp  Solver.cpp  Solver.hpp  Tree.cpp  Tree.hpp  Utils.cpp  Utils.hpp
connectR/interface/: BoardSize.hpp  IBoard.hpp  ISolver.hpp  ITree.hpp
connectR/iteration1/: Board2D.cpp  Board2D.hpp  SolverBasic.cpp  SolverBasic.hpp  SolverBlank.cpp  SolverBlank.hpp  TreeBasic.cpp  TreeBasic.hpp
connectR_implementation/: CMakeLists.txt  main.cpp
connectR_tests/: CMakeLists.txt
connectR_tests/tests/: BlankTest.cpp  CMakeLists.txt
